assets/stylesheets/components/_code-modal.scss
body.code-modal-open {
  overflow: hidden;
}

.modal-overlay,
.modal-window {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100%;
  left: 0;
  opacity: 0;
  position: fixed;
  top: 0;
  width: 100%;
  visibility: hidden;
  z-index: $modal-overlay-z-index;
}

.modal-overlay {
  background: white;

  &.open {
    visibility: visible;
    opacity: 0.85;
    transition: opacity $slower-duration;
  }

  &.closed {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s $slower-duration, opacity $slower-duration;
  }
}

.modal-window {
  overflow: scroll;
  background: color("code-almost-white");

  &.open {
    visibility: visible;
    opacity: 1;
    transition: opacity $slower-duration;
  }

  &.closed {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s $slower-duration, opacity $slower-duration;
  }

  .modal-content {
    align-self: left;
    display: inline-block;
    padding: $base-spacing * 2 $base-spacing $base-spacing $base-spacing;
    z-index: $pre-expanded-z-index;
    background-color: color("white");

    pre {
      -webkit-filter: none;
      filter: none;
      margin: 0;
      background: transparent;
      max-height: none;
      overflow: visible;
      padding: 0;
      border: none;
    }

    @media (min-width: $mobile-large) {
      align-self: unset;
    }
  }

  .modal-controls {
    position: fixed;
    z-index: $modal-close-z-index;
    margin-top: $small-spacing;
  }

  .modal-close,
  .modal-copy-button {
    @include overlay-button($background-color: white);

    display: inline-block;
    margin-right: $small-spacing;
    vertical-align: middle;
  }

  .modal-copy-button {
    border-radius: 0;
    font-size: inherit;
    line-height: inherit;

    &.copied {
      color: color("code-green");
    }
  }
}

